connector z-index fix

--- a/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
+++ b/client/css/Widgets/DiagramDesigner/DiagramDesignerWidget.css
@@ -64,6 +64,7 @@
       position: absolute;
       cursor: pointer;
       border: 1px solid blue;
+      z-index: 10;
       background-color: white;
       border-radius: 12px;
       margin-left: -6px;
@@ -88,6 +89,7 @@
       position: absolute;
       cursor: pointer;
       border: 1px solid blue;
+      z-index: 10;
       margin-top: -6px;
       margin-left: -6px;
       line-height: 10px;
