--- a/client/decorators/AttributesDecorator/DiagramDesigner/AttributesDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/AttributesDecorator/DiagramDesigner/AttributesDecorator.DiagramDesignerWidget.css
@@ -50,6 +50,7 @@
     position: absolute;
     cursor: pointer;
     border: 1px solid blue;
+    z-index: 10;
     margin-left: -6px;
     left: 50%; }
     .attributes-decorator .connector:hover {
