--- a/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/ModelDecorator/DiagramDesigner/ModelDecorator.DiagramDesignerWidget.css
@@ -129,6 +129,7 @@
   position: absolute;
   cursor: pointer;
   border: 1px solid blue;
+  z-index: 10;
   margin-left: -6px;
   left: 50%; }
   .model-decorator .connector:hover {
