--- a/client/decorators/ModelicaDecorator/DiagramDesigner/ModelicaDecorator.DiagramDesignerWidget.css
+++ b/client/decorators/ModelicaDecorator/DiagramDesigner/ModelicaDecorator.DiagramDesignerWidget.css
@@ -14,6 +14,7 @@
     position: absolute;
     cursor: pointer;
     border: 1px solid blue;
+    z-index: 10;
     left: 50%; }
     .designer-item .modelica-decorator .connector:hover {
       border-color: rgba(82, 168, 236, 0.8);
