--- a/client/scss/Widgets/DiagramDesigner/_Connector.scss
+++ b/client/scss/Widgets/DiagramDesigner/_Connector.scss
@@ -14,6 +14,7 @@ $connector-hover-shadow-color-end: rgba(82, 168, 236, 0.6);
   position: absolute;
   cursor: pointer;
   border: $connector-border;
+  z-index: 10;
 
   &:hover {
     border-color: $connector-hover-border-color;
